--- a/templates/partials/citations.html.twig
+++ b/templates/partials/citations.html.twig
@@ -4,17 +4,18 @@
 {% set page_config = page.header.shortcode_citation %}
 {% set plugin_config = config.plugins["shortcode-citation"] %}
 
-
 {% if plugin_config.builtin_css %}
   {% do assets.addCss("plugins://shortcode-citation/css/citations.css") %}
 {% endif %}
 
+{# Get the list of citations #}
 {% set cites = citations.getCitations() %}
 
-
+{# Get the reference list #}
 {% set reference_list = page.header.references %}
 {% set references = {} %}
 
+{# Reorganise the reference list to use the ID as a key #}
 {% for ref in reference_list %}
   {# Adding "ref-" avoids issues with numeric IDs acting as indices #}
   {% set references = references|merge({("ref-"~ref["id"]): ref}) %}
@@ -22,38 +23,49 @@
 
 
 {# Alphabetise/Reorder references if required #}
-{% if reorder ?: page_config.reorder_uncited ?: plugin_config.reorder_uncited %}
+{% if ((reorder is defined) ? reorder : (page_config.reorder_uncited is defined) ? page_config.reorder_uncited : (plugin_config.reorder_uncited is defined) ? plugin_config.reorder_uncited : true) %}
   {% set references = references|ksort %}
 {% endif %}
 
 
-{# 'heading' comes via Shortcode #}
-{% if not heading is same as("false") and not heading == 0 %}
-  {% set heading_text = heading ?: page_config.heading_text ?: plugin_config.heading_text ?: "References" %}
-{% endif %}
+{# Determine the heading text #}
+{% set falsey = ["", 0, "0", false, "false"] %}
+{% set heading_text =
+  (
+    heading is defined
+  ) ? heading : (
+    page_config.heading_text is defined
+  ) ? page_config.heading_text : (
+    plugin_config.heading_text is defined
+  ) ? plugin_config.heading_text : (
+    "References"
+  )
+%}
+{% set heading_text = (falsey == falsey|merge([heading_text])) ? false : heading_text %}
 
 
+{# Determine which items to show #}
 {% set items = items ?: page_config.items ?: plugin_config.items %}
-
 
 {% if items is same as("all") %}
   {# Append the keys for uncited works #}
   {% for key in references|keys %}
-    {% if key[4:] not in citations %}
-      {% set citations = citations|merge([key[4:]]) %}
+    {% if key[4:] not in cites %}
+      {% set cites = cites|merge([key[4:]]) %}
     {% endif %}
   {% endfor %}
 {% elseif items is same as("uncited") %}
   {% set uncited = [] %}
   {% for key in references|keys %}
-    {% if key[4:] not in citations %}
+    {% if key[4:] not in cites %}
       {% set uncited = uncited|merge([key[4:]]) %}
     {% endif %}
   {% endfor %}
-  {% set citations = uncited %}
+  {% set cites = uncited %}
 {% endif %}
 
 
+{# Print the citation list (if there are citations) #}
 {% if cites %}
   <section class="references">
     {% if heading_text %}
