Remove highlight class

--- a/css/citations.css
+++ b/css/citations.css
@@ -10,9 +10,9 @@
   font-weight: bold;
 }
 
-.references .highlight li:target {
+.references li:target {
   background: #0002;
-  
+
 }
 
 .references li {
